# habitron-client

./: .gitignore  CHANGELOG.md  LICENSE  README.md  publish.ps1  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: capture_hub.py  scrub_recording.py
src/habitron_client/: __init__.py  _events.py  _indices.py  _models.py  _parse.py  _parse_router.py  _protocol.py  _setup.py  _transport.py  client.py  const.py  discovery.py  exceptions.py  faults.py  model.py
tests/: sim.py  test_client.py  test_discovery.py  test_events.py  test_faults.py  test_models.py  test_parse_fixtures.py  test_protocol.py  test_realdata.py  test_replay_real.py  test_scramble.py  test_scrub.py  test_setup_refresh.py  test_transport.py
tests/fixtures/: anon_recording.json
