[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitron-client"
version = "0.1.4"
description = "Asynchronous API client for Habitron SmartHub"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Habitron GmbH" }]
dependencies = [
    "pyyaml>=6.0",
]

[tool.ruff]
# Deine Ruff-Konfiguration bleibt hier erhalten
line-length = 88