[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "habitron-client"
version = "2.0.7"
description = "Asynchronous, typed API client for the Habitron SmartHub"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Habitron GmbH" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: AsyncIO",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/habitron_client"]

[tool.hatch.build.targets.wheel.force-include]
"src/habitron_client/py.typed" = "habitron_client/py.typed"

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "RUF"]
# Per-operation timeout parameters are a deliberate part of the public API.
ignore = ["ASYNC109"]

[tool.ruff.lint.per-file-ignores]
# Test scenarios nest dependent async-with blocks, use wide parametrize rows
# and poll the simulator with a sleep loop.
"tests/**" = ["SIM117", "E501", "ASYNC110"]

[tool.mypy]
python_version = "3.14"
strict = true
files = ["src/habitron_client"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=habitron_client --cov-report=term-missing --cov-fail-under=90"
